# Updated_Langchain_Lab

./: README.md  main.py  pyproject.toml  requirements.txt
updatedlangchain/: 1-langchainintro.ipynb  2-modelintegration.ipynb
